[project]
requires-python = ">= 3.11"

[tool.poetry]
name = "arrlio"
version = "1.0.0a1"
description = ""
authors = ["Roman Koshel <roma.koshel@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["rabbitmq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
packages = [{include = "arrlio"}]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
aiormq = ">=6.7.6"
rmqaio = ">=0.10.0"
msgpack = "*"
pydantic = "^2.10"
pydantic_settings = "*"
rich = "*"
roview = "*"
yarl = "*"

[tool.poetry.group.dev.dependencies]
invoke = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
celery = "*"
coverage = "*"
docker = "*"
httpx = "*"
pytest = "*"
pytest_asyncio = "*"
pytest_timeout = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
indent = 4
lines_after_imports = 2
lines_between_types = 1
src_paths = ["."]
profile = "black"

[tool.ruff]
target-version = "py311"
